tests/miniJava/neg/000338_mutation.MiniJava
class java { public static void Main ( static [ ] java ) { { } } }
